Worked on user story - As a doctor, I want to be able to add a new patient to my profile, so that I can keep track of their health records.
